--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <td>
                 <table>
                     <tr>
-                        <td>Arthmatic</td>
+                        <td>Arithmetic</td>
                         <td>&#11088&#11088&#11088&#11088&#11088</td>
                     </tr>
                     <tr>
