--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
                     <p><em>Founder <a href="https://www.fidosfollowing.com">Fidos Following Dog Walking and Pet Sitting
                                 Service</a><strong></strong>
                         </em>
-                    <p>I am a pet needs specialist, a website builder and the CEO of a nonprofit working to empower
-                        foster youth to
-                        build long productive lives.
+                    <p>I am a pet needs specialist, a student website builder, a musician and a writer.  
                         I have degrees in biology and applied mathamtics from San Diego State University.
             </td>
         </tr>
