--- a/Contact.html
+++ b/Contact.html
@@ -23,6 +23,7 @@
         <img src="WhatsappQR.png"alt="QR Code to Whatsapp" width="275" height="300"> 
     </p>
     <hr>
+    <h4>Send me an Email</h4>
     <form action="mailto:irenemayjunetassie@gmail.com" method="post" enctype="text/plain">
         <label for="">Your Name</label>
         <input type="text" name="Your Name" value="">
